chore: config postgres database

--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+# DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://nextjs-todolist_owner:g3AIBhU0rSNm@ep-ancient-hat-a59j9s9g.us-east-2.aws.neon.tech/nextjs-todolist?sslmode=require"
 NEXT_PUBLIC_API_URL="https://nextjs-todolist-gamma.vercel.app/api"
+
